<resources>
    <string name="app_name">Calculator</string>

    <string name="enter_number">Enter Number</string>
    <string name="enter_procent">Enter Percent</string>
    <string name="btn_clear">Clear</string>

    <string name="sym_sum"> + </string>
    <string name="sym_min"> - </string>
    <string name="sym_div"> / </string>
    <string name="sym_mult"> * </string>
    <string name="sym_ruten"> √() </string>
    <string name="sym_procent"> % </string>
    <string name="sym_pytagoras"> ∆ </string>
    <string name="sym_cyrkel_area">Circle\nArea</string>
    <string name="sym_cylinder">Cylinder\nVolume</string>
    <string name="sym_likaMed">=</string>
    <string name="formel_pyta">C = √a²+b²</string>
    <string name="formel_cirkel">A = πr²</string>
    <string name="formel_cylind">V = πr²h</string>

    <string name="text_value_radius">Enter Radius</string>
    <string name="text_value_pytaA">Enter a</string>
    <string name="text_value_pytaB">Enter b</string>
    <string name="text_value1_cylinder_height">Enter Height</string>
    <string name="percent_of">% of</string>
    <string name="empty_field" />

</resources>